# libhdfs

./: .gitignore  Makefile  README  README.md  libhdfs.sublime-project
.dist-buildwrapper/: .Setup.hs.bwinfo  libhdfs.cabal
.dist-buildwrapper/src/System/: .HDFS.hs.bwinfo  .Hdfs.hs.bwinfo  Hdfs.hs
.dist-buildwrapper/src/System/Hdfs/Interop/: .Wrapper.hs.bwinfo  .Wrapper.hs.bwinfo.BASE.9105.bwinfo  .Wrapper.hs.bwinfo.LOCAL.9105.bwinfo  Wrapper.hs
native/lib/: libhdfs.0.dylib  libhdfs.la
src/System/Hdfs/Interop/: Wrapper.hs  Wrapper.hsc
