name:           libhdfs
version:        0.1
cabal-version:  >= 1.2
build-type:     Simple
author:         Andrei Varanovich
license:        GPL-3

library
  hs-source-dirs:  src
  build-depends:   
                   base >= 4,
                   vector >=0.9.1,
                   bytestring >=0.9.1.10
  ghc-options:     -Wall
  other-modules:   
                   System.Hdfs,
                   System.Hdfs.Interop.Wrapper

